--- a/Components/css/produtoCard.css
+++ b/Components/css/produtoCard.css
@@ -4,18 +4,32 @@
     padding: 0;
     box-shadow: none;
 }
+.desc{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 35%;
+    & .card4{
+        position: absolute;
+        bottom: 0;
+    } & .card3{
+        margin-top: 9px;
+    }
+}
 
 #secProduto > .produto {
     background-color: #19535F;
     width: 220px;
-    height: 225px;
+    height: 295px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
     padding: 15px;
     border-radius: 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     transition: transform 0.3s ease; 
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    align-items: center;
 
     & #nomeProduto, #precoProduto{
         font-family: "Inter", serif;
@@ -40,16 +54,19 @@
     
 }
 .divImgProd{
-    width: 100px;
-    height: 125px;
-    
+    width: 87%;
+    height: 65%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 17%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     & img {
         border-radius: 12px;
-        width: 100%;
-        height: 100%;
+        border-radius: 17%;
+        width: 80%;
+        height: 80%;
         object-fit: contain;
-        
-        
         
     }
 }
