--- a/Pages/login/style.css
+++ b/Pages/login/style.css
@@ -20,6 +20,7 @@ body {
     width: 650px;
     background: white;
     border-radius: 10px;
+    
   
 }
 
@@ -30,7 +31,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 105px 10px 10px 105px;
+    border-radius: 10px 105px 105px 10px;
 }
 
 .welcome{
@@ -87,46 +88,25 @@ body {
 }
 
 /* Estilização dos inputs */
-.input {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.input input {
-    width: 100%;
+input {
     padding: 10px;
-    padding-left: 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
 }
 
-/* Ícones dentro dos inputs */
-.input::before {
-    content: "👤";
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #888;
-    font-size: 18px;
+.input ::placeholder{
+    color: #0d4e56;
 }
 
-.input:nth-child(2)::before {
-    content: "🔒";
-}
-
-/* Botão de login */
 .btn {
-    width: 100%;
+    background-color: #0d4e56;
+    color: white;
     padding: 10px;
-    background-color: #1c5b5e;
-    color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    transition: 0.3s;
 }
 
 .btn:hover {
@@ -142,12 +122,10 @@ body {
 /* Botão de cadastro na área de login */
 .login-box #cadastroBtn {
     background-color: transparent;
-    border: 2px solid #1c5b5e;
     color: #1c5b5e;
     margin-top: 10px;
 }
 
-.login-box #cadastroBtn:hover {
-    background-color: #1c5b5e;
-    color: #fff;
+.input ::placeholder{
+    color: #0d4e56;
 }
