--- a/Components/css/editCard.css
+++ b/Components/css/editCard.css
@@ -22,10 +22,18 @@
         bottom: 0; */
     }
 }
+.borda{
+    border-style: solid;
+    border-width: 1px 0px 0px 0px;
+    border-color: #D0D5EE;
+    display: flex;
+    align-items: center;
+}
 .infoProduto{
     width: 220px;
     height: 295px;
     position: absolute;
+    transition: 0.3s ease-in-out;
 }
 
 .produto {
@@ -36,6 +44,7 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
+    
     border-radius: 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     /* transition: transform 0.3s ease;  */
@@ -46,6 +55,7 @@
         & .infoProduto{
             /* transform: scale(1.05); */
             filter: blur(1.5px);
+            
         }
         & .ctaCardProduto{
             height: auto;
@@ -54,6 +64,7 @@
             opacity: 1;
             gap: 30px;
             top: 50%;
+            transition: 0.5s ease-in-out;
             transform: translateY(-50%);
             position: absolute;
             width: 192px;
@@ -129,8 +140,8 @@
 
 
 #secProduto {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(5, 300px);
     justify-content: center;
     gap: 15px;
     margin-top: 100px;
