--- a/Components/css/editCard.css
+++ b/Components/css/editCard.css
@@ -36,6 +36,7 @@
     transition: 0.3s ease-in-out;
 }
 
+
 .produto {
     position: relative;
     background-color: #19535F;
@@ -51,12 +52,12 @@
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     align-items: center;
     
-    &:hover{
+    &.blur{
         & .infoProduto{
-            /* transform: scale(1.05); */
-            filter: blur(1.5px);
+            transform: scale(1.05); 
+            filter: blur(1.5px); 
             
-        }
+         }
         & .ctaCardProduto{
             height: auto;
             display: flex;
@@ -75,7 +76,6 @@
             font-weight: bold;
         }
     }
-
     & .nomeProduto, .precoProduto{
         font-family: "Inter", serif;
         font-weight: 600;
@@ -91,7 +91,7 @@
         z-index: 999;
         bottom: 0;
         opacity: 0;
-    } 
+    }  
 }
 .options{
     gap: 15px;
@@ -115,6 +115,9 @@
         background-color: #FEFFE9;
     }
 }
+/* .produto.blur{
+    background-color: red;
+} */
 .del-box{
     margin-left: 6px;
     background-color: #FEFFE9;
