--- a/Pages/Usuario/style.css
+++ b/Pages/Usuario/style.css
@@ -1,12 +1,98 @@
 * {
     padding: 0;
     margin: 0;
-    border: 0;
+    box-sizing: border-box;
   }
 
+fieldset {
+  border: 3px solid #19535F;
+  border-radius: 8px;
+  padding: 15px;
+  margin: 30px;
+}
+
+legend{
+  font-size: 1.5rem;
+  font-family: Arial, sans-serif;
+  padding: 8px;
+  font-weight: bold;
+}
+
+label {
+  margin-bottom: 5px; 
+  font-weight: 500;
+}
+
+input {
+  padding: 0.5rem 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 100%;
+  margin-top: 5px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column; 
+  background-color: #fff;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-family: Arial, sans-serif;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+input[type="text"], input[type="email"], input[type="password"], input[type="tel"] {
+  background-color: #D9D9D9;
+  font-size: 1rem;
+}
+
+/* coloca o ponteiro de bloqueado em um campo de input */
+#nome[disabled], #email[disabled] {
+  cursor: not-allowed;
+}
+
+.envioInput {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.envioInput button {
+  border-radius: 15px;
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.envioInput button:hover {
+  background-color: #388E3C;
+}
+
+@media (max-width: 600px) {
   fieldset {
-    border: 3px solid #19535F;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    padding: 15px;
+      margin: 15px;
+      padding: 10px;
+  }
+
+  legend {
+      font-size: 1.2rem;
+  }
+
+  input {
+      font-size: 0.9rem;
+  }
+
+  .container {
+      padding: 8px;
+  }
+
+  .envioInput button {
+      padding: 8px 16px;
+      font-size: 0.9rem;
+  }
 }
